# nekoneko

./: .env.example  .gitignore  00_overview_elderly_companion_ai.md  01_prd_elderly_multi_agent_companion_ai.md  02_technical_roadmap_elderly_multi_agent_companion_ai.md  03_fxy_integration_review.md  04_engagement_agent_optimization_review.md  AGENTS.md  CLAUDE.md  FEATURE_TEST_GUIDE.md  Makefile  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: companion.py  coordinator.py  guardian.py  relationship_orchestrator.py  (+1 more)
backend/tests/: conftest.py  test_caregiver_endpoint.py  test_chat_endpoint.py  test_companion_modes.py  test_conversation_history.py  test_coordinator_routing.py  test_evaluation_endpoint.py  test_guardian.py  test_health.py  test_info_retrieval.py  test_input_rule_guard.py  test_integration_scenarios.py  test_llm_provider.py  test_memory_candidate_extractor.py  test_memory_cards.py  test_memory_endpoint.py  test_memory_memory_card_integration.py  test_memory_similarity.py  test_memory_store.py  test_memory_tool.py  test_memory_triage_policy.py  test_mock_voice_provider.py  test_output_rule_guard.py  test_profile_store.py  test_relationship_cueing.py  test_relationship_orchestrator.py  test_reminder_endpoint.py  test_reminder_store.py  test_reminder_tool.py  test_retrieval_gating.py  test_role_profiles.py  test_safety_critic.py  test_sensor_adapter.py  test_sensors_endpoint.py  test_trace_privacy.py  test_trace_schema.py  test_trace_store.py  test_traces_endpoint.py  test_users_endpoint.py  test_voice_endpoint.py  (+1 more)
(+168 files in other folders)
